# cpython-test

./: .gitignore  buildscript.sh  pyproject.toml  setup.py
myPower/: __init__.py  power.c  power.pyi
myPower.egg-info/: PKG-INFO  SOURCES.txt
src/: power.c
src/myPower.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
testfolder/: test1.py
tests/: test.py
