[build-system]
requires = ["setuptools>=61.0", "wheel>=0.37.0", "Cython>=0.30.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myPower"
version = "0.1.0"
authors = [
    {name = "PurpleLemons"}
]
description = "take a number to the power of another number"
requires-python = ">=3.11.1"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha"
]
