[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myPower"
version = "0.2.0"
authors = [
    {name = "PurpleLemons"}
]
requires-python = ">=3.11.1"
license = {text= "GLPv3"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: Implementation :: CPython"
]